[KAN-29]: Basic APIs for threshold
